# scheme

./: .gitignore  AGENTS.md  BUILD.bazel  Dockerfile  MODULE.bazel  WORKSPACE  deps.bzl  docker-compose.yaml  go.mod  go.sum  main.go  readme.adoc
docker/: Dockerfile  docker-compose.yaml
openapi/: BUILD.bazel  parser.go  parser_test.go
openapi/2/: parsing_test.go
rules/: BUILD.bazel  rules.go  rules_test.go  type_test.go
scripts/: docker-build-run.sh  es-start.sh  start.sh  upload.sh
search/: BUILD.bazel  model.go  model_test.go
service/: BUILD.bazel  api.go  api_store.go  api_view.go  doc_service.go  error_response.go  get_api.go  get_api_test.go  home.go  list_apis.go  list_interfaces.go  main.go  new_api.go  new_api_test.go  new_interface.go  registrations.go  search.go  server.go  service_stats.go  stubbed_store.go  test_helpers.go
service/server/: BUILD.bazel  api_view.go  content_types.go  error_response.go  get_api.go  get_api_test.go  home.go  info.go  list_apis.go  new_api.go  new_api_test.go  registrations.go  search.go  server.go  service_stats.go  test_helpers.go
service/site/: index.html  user-guide.html  view.html
service/site/js/: appelicon.js  scheme.js  view.js
service/site/templates/: error.html  view.html
service/store/: BUILD.bazel  api.go  api_store.go  doc_service.go  stubbed_store.go
site/: index.html
site/js/: appelicon.js
wadl/: BUILD.bazel  parser.go  parser_test.go
