module(
    name = "scheme",
    version = "0.0.0",
)

#bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_elastic_go_elasticsearch_v7",
    "com_github_gorilla_mux",
    "com_github_sirupsen_logrus",
    "com_github_stretchr_testify",
    "com_github_yalp_jsonpath",
    "in_gopkg_yaml_v3",
)
