load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["parser.go"],
    importpath = "github.com/grahambrooks/scheme/openapi",
    visibility = ["//visibility:public"],
    deps = ["//search:go_default_library",
            "@in_gopkg_yaml_v2//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["parser_test.go"],
    embed = [":go_default_library"],
    data = glob(["test/**"]),
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
