load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "openapi",
    srcs = ["parser.go"],
    importpath = "github.com/grahambrooks/scheme/openapi",
    visibility = ["//visibility:public"],
    deps = [
        "//search",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "openapi_test",
    srcs = ["parser_test.go"],
    data = glob(["test/**"]),
    embed = [":openapi"],
    deps = [
        "//search",
        "@com_github_stretchr_testify//assert",
    ],
)
