load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix scheme/rules
gazelle(name = "gazelle")

go_library(
    name = "rules",
    srcs = ["rules.go"],
    importpath = "scheme/rules",
    visibility = ["//visibility:private"],
    deps = ["@com_github_yalp_jsonpath//:jsonpath"],
)

go_test(
    name = "rules_test",
    srcs = [
        "rules_test.go",
        "type_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":rules"],
    deps = [
        "//openapi",
        "//search",
        "@com_github_stretchr_testify//assert",
        "@com_github_yalp_jsonpath//:jsonpath",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)
