load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "search",
    srcs = ["model.go"],
    importpath = "github.com/grahambrooks/scheme/search",
    visibility = ["//visibility:public"],
)

go_test(
    name = "search_test",
    srcs = ["model_test.go"],
    embed = [":search"],
    deps = ["@com_github_stretchr_testify//assert"],
)
