load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/grahambrooks/scheme/service
gazelle(name = "gazelle")

go_library(
    name = "service_lib",
    srcs = ["main.go"],
    importpath = "github.com/grahambrooks/scheme/service",
    visibility = ["//visibility:private"],
    deps = [
        "//service/server",
        "//service/store",
    ],
)

go_binary(
    name = "scheme",
    data = glob(["site/**"]),
    embed = [":service_lib"],
    visibility = ["//visibility:public"],
)
