load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wadl",
    srcs = ["parser.go"],
    importpath = "github.com/grahambrooks/scheme/wadl",
    visibility = ["//visibility:public"],
    deps = ["//search"],
)

go_test(
    name = "wadl_test",
    srcs = ["parser_test.go"],
    data = glob(["test/**"]),
    embed = [":wadl"],
    deps = [
        "//search",
        "@com_github_stretchr_testify//assert",
    ],
)
